Fix spacing in creator comment badges

--- a/src/catppuccin.user.css
+++ b/src/catppuccin.user.css
@@ -654,6 +654,8 @@
       --ytd-author-comment-badge-background-color: @surface0 !important;
       --ytd-author-comment-badge-name-color: @text !important;
       --ytd-author-comment-badge-icon-color: @text !important;
+      padding-right: 6px;
+      padding-left: 8px;
     }
 
     /* badges e.g. popular */
